--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "register-service-worker": "^1.7.2",
+    "vee-validate": "^4.5.8",
+    "vue": "^3.2.13",
+    "vue-router": "^4.3.0",
+    "vuex": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
